<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_select_epub"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/select_epub" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/app_description">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_version"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="Version 2.0.0"
                android:enabled="false" />
        </menu>
    </item>
</menu>
